# serializer version: 1
# name: test_parse_devices
  dict({
    'air_temp': dict({
      'data': dict({
        'name': 'air_temp',
        'state': '72',
      }),
      'label': 'Air Temp',
      'state': '72',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'aux_1': dict({
      'data': dict({
        'aux': '1',
        'icon': 'aux_0.png',
        'label': 'Water Feature',
        'name': 'aux_1',
        'state': '0',
        'subtype': '0',
        'type': '0',
      }),
      'is_on': False,
      'label': 'Water Feature',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaAuxSwitch',
    }),
    'aux_2': dict({
      'data': dict({
        'aux': '2',
        'icon': 'aux_0.png',
        'label': 'Dimmable Light',
        'name': 'aux_2',
        'state': '0',
        'subtype': '0',
        'type': '1',
      }),
      'is_on': False,
      'label': 'Dimmable Light',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaDimmableLight',
    }),
    'aux_3': dict({
      'data': dict({
        'aux': '3',
        'icon': 'aux_0.png',
        'label': 'AUX LIGHT',
        'name': 'aux_3',
        'state': '0',
        'subtype': '0',
        'type': '0',
      }),
      'is_on': False,
      'label': 'Aux Light',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaLightSwitch',
    }),
    'aux_B1': dict({
      'data': dict({
        'aux': 'B1',
        'icon': 'aux_1_0.png',
        'label': 'Pool Light',
        'name': 'aux_B1',
        'state': '0',
        'subtype': '5',
        'type': '2',
      }),
      'is_on': False,
      'label': 'Pool Light',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaColorLightIB',
    }),
    'freeze_protection': dict({
      'data': dict({
        'name': 'freeze_protection',
        'state': '0',
      }),
      'is_on': False,
      'label': 'Freeze Protection',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaBinarySensor',
    }),
    'pool_heater': dict({
      'data': dict({
        'name': 'pool_heater',
        'state': '0',
      }),
      'is_on': False,
      'label': 'Pool Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'data': dict({
        'name': 'pool_pump',
        'state': '1',
      }),
      'is_on': True,
      'label': 'Pool Pump',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaSwitch',
    }),
    'pool_set_point': dict({
      'data': dict({
        'name': 'pool_set_point',
        'state': '80',
      }),
      'is_on': False,
      'label': 'Pool Set Point',
      'state': '80',
      'state_translated': None,
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'pool_temp': dict({
      'data': dict({
        'name': 'pool_temp',
        'state': '78',
      }),
      'label': 'Pool Temp',
      'state': '78',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'spa_heater': dict({
      'data': dict({
        'name': 'spa_heater',
        'state': '1',
      }),
      'is_on': True,
      'label': 'Spa Heater',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'data': dict({
        'name': 'spa_pump',
        'state': '0',
      }),
      'is_on': False,
      'label': 'Spa Pump',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaSwitch',
    }),
    'spa_set_point': dict({
      'data': dict({
        'name': 'spa_set_point',
        'state': '104',
      }),
      'is_on': True,
      'label': 'Spa Set Point',
      'state': '104',
      'state_translated': None,
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'spa_temp': dict({
      'data': dict({
        'name': 'spa_temp',
        'state': '102',
      }),
      'label': 'Spa Temp',
      'state': '102',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
  })
# ---
# name: test_parse_home
  dict({
    'air_temp': dict({
      'data': dict({
        'name': 'air_temp',
        'state': '72',
      }),
      'label': 'Air Temp',
      'state': '72',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'freeze_protection': dict({
      'data': dict({
        'name': 'freeze_protection',
        'state': '0',
      }),
      'is_on': False,
      'label': 'Freeze Protection',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaBinarySensor',
    }),
    'pool_heater': dict({
      'data': dict({
        'name': 'pool_heater',
        'state': '0',
      }),
      'is_on': False,
      'label': 'Pool Heater',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaHeater',
    }),
    'pool_pump': dict({
      'data': dict({
        'name': 'pool_pump',
        'state': '1',
      }),
      'is_on': True,
      'label': 'Pool Pump',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaSwitch',
    }),
    'pool_set_point': dict({
      'data': dict({
        'name': 'pool_set_point',
        'state': '80',
      }),
      'is_on': False,
      'label': 'Pool Set Point',
      'state': '80',
      'state_translated': None,
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'pool_temp': dict({
      'data': dict({
        'name': 'pool_temp',
        'state': '78',
      }),
      'label': 'Pool Temp',
      'state': '78',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
    'spa_heater': dict({
      'data': dict({
        'name': 'spa_heater',
        'state': '1',
      }),
      'is_on': True,
      'label': 'Spa Heater',
      'state': '1',
      'state_translated': 'ON',
      'type': 'IaquaHeater',
    }),
    'spa_pump': dict({
      'data': dict({
        'name': 'spa_pump',
        'state': '0',
      }),
      'is_on': False,
      'label': 'Spa Pump',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaSwitch',
    }),
    'spa_set_point': dict({
      'data': dict({
        'name': 'spa_set_point',
        'state': '104',
      }),
      'is_on': True,
      'label': 'Spa Set Point',
      'state': '104',
      'state_translated': None,
      'type': 'IaquaThermostat',
      'unit': <IaquaTemperatureUnit.FAHRENHEIT: 'F'>,
    }),
    'spa_temp': dict({
      'data': dict({
        'name': 'spa_temp',
        'state': '102',
      }),
      'label': 'Spa Temp',
      'state': '102',
      'state_translated': None,
      'type': 'IaquaSensor',
    }),
  })
# ---
# name: test_parse_onetouch
  dict({
    'onetouch_1': dict({
      'data': dict({
        'label': 'Morning Scene',
        'name': 'onetouch_1',
        'state': '0',
        'status': '1',
      }),
      'is_on': False,
      'label': 'Morning Scene',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
    }),
    'onetouch_2': dict({
      'data': dict({
        'label': 'Evening Scene',
        'name': 'onetouch_2',
        'state': '0',
        'status': '1',
      }),
      'is_on': False,
      'label': 'Evening Scene',
      'state': '0',
      'state_translated': 'OFF',
      'type': 'IaquaOneTouchSwitch',
    }),
  })
# ---
